err/oboe.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/oboe'...
Compiling './lib/python3.5/site-packages/oboe/__init__.py'...
***   File "./lib/python3.5/site-packages/oboe/__init__.py", line 56
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oboe/rum.py'...
***   File "./lib/python3.5/site-packages/oboe/rum.py", line 10
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/oboe-1.5.11.egg-info'...
Listing './lib/python3.5/site-packages/oboeware'...
Compiling './lib/python3.5/site-packages/oboeware/djangoware.py'...
***   File "./lib/python3.5/site-packages/oboeware/djangoware.py", line 36
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oboeware/imports.py'...
***   File "./lib/python3.5/site-packages/oboeware/imports.py", line 183
    raise exc[0],exc[1],exc[2]
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oboeware/inst_django_orm.py'...
***   File "./lib/python3.5/site-packages/oboeware/inst_django_orm.py", line 79
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oboeware/inst_django_templates.py'...
***   File "./lib/python3.5/site-packages/oboeware/inst_django_templates.py", line 40
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oboeware/inst_httplib.py'...
***   File "./lib/python3.5/site-packages/oboeware/inst_httplib.py", line 69
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oboeware/inst_memcache.py'...
***   File "./lib/python3.5/site-packages/oboeware/inst_memcache.py", line 59
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oboeware/inst_pymongo.py'...
***   File "./lib/python3.5/site-packages/oboeware/inst_pymongo.py", line 212
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oboeware/inst_redis.py'...
***   File "./lib/python3.5/site-packages/oboeware/inst_redis.py", line 183
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
